--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
   "feed"
  ],
  "author": "CuratorOfBinaries",
- "license": "MIT"
+ "license": "MIT",
+ "engines": {
+    "node": ">=20.0.0 <22.0.0"
+  }
 }
